[gd_scene load_steps=9 format=3 uid="uid://brxq8kk53a3hx"]

[ext_resource type="Script" path="res://Scripts/BaseUIComponents/ProgressBar.gd" id="1_kliit"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8imxx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_korfd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oo1tl"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Animation" id="Animation_llpp8"]
resource_name = "Paused&Error"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/2/Mask:size_flags_stretch_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0001, 0.25, 1),
"transitions": PackedFloat32Array(0.1, 10, 0.1),
"update": 0,
"values": [20.0, 0.0, 20.0]
}

[sub_resource type="Animation" id="Animation_v1lhq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/1/Empty:size_flags_stretch_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/1/Mask/Line:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/2/Mask:size_flags_stretch_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [20.0]
}

[sub_resource type="Animation" id="Animation_d26ai"]
resource_name = "Running"
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/1/Empty:size_flags_stretch_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(10, 0.2),
"update": 0,
"values": [0.0, 3.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/1/Mask/Line:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/2/Mask:size_flags_stretch_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(10, 0.2),
"update": 0,
"values": [0.0, 20.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j12yy"]
_data = {
"Paused&Error": SubResource("Animation_llpp8"),
"RESET": SubResource("Animation_v1lhq"),
"Running": SubResource("Animation_d26ai")
}

[node name="ProgressBar" type="PanelContainer"]
offset_right = 225.0
offset_bottom = 4.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_8imxx")
script = ExtResource("1_kliit")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
size_flags_vertical = 0

[node name="1" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Empty" type="PanelContainer" parent="MarginContainer/1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_korfd")

[node name="Mask" type="PanelContainer" parent="MarginContainer/1"]
clip_children = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.01
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oo1tl")

[node name="Line" type="ColorRect" parent="MarginContainer/1/Mask"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
mouse_filter = 2
color = Color(0, 0.403922, 0.752941, 1)

[node name="2" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Mask" type="PanelContainer" parent="MarginContainer/2"]
clip_children = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oo1tl")

[node name="Line" type="ColorRect" parent="MarginContainer/2/Mask"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
color = Color(0, 0.403922, 0.752941, 1)

[node name="Empty" type="PanelContainer" parent="MarginContainer/2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_korfd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_j12yy")
}

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
